# pos-cmp

./: .gitmodules  CMakeLists.txt  README.md
include/: bit_coders.hpp  bit_magic.hpp  bit_streams.hpp  bitvector_list.hpp  collection.hpp  dict_map.hpp  doc_perm.hpp  doc_pos_mapper.hpp  eliasfano_list.hpp  eliasfano_skip_list.hpp  eliasfano_sskip_list.hpp  index_abspos.hpp  index_invidx.hpp  index_nextword.hpp  index_relnextword.hpp  index_relpos.hpp  index_sada.hpp  index_sort.hpp  index_wt.hpp  indexes.hpp  intersection.hpp  list_basics.hpp  list_types.hpp  optpfor_list.hpp  patterns.hpp  range_iterators.hpp  rank_functions.hpp  uniform_elias_fano.hpp  utils.hpp
src/: compare_invidx.cpp  convert_pattern_file.cpp  convert_pattern_format.cpp  generate_patterns.cpp  index_bench.cpp  index_bench_doc.cpp  index_bench_doclvl.cpp  index_create.cpp  index_daemon.cpp  index_verify.cpp  index_verify_doc.cpp  test_intersection.cpp  unittest.cpp
